--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ layout: poor
   <title>DS3</title>
 
   <!-- Bootstrap core CSS -->
-  <!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
-  <link href="https://github.com/chabrowa/jkan/blob/gh-pages/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="https://github.com/chabrowa/jkan/blob/gh-pages/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
