--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: poor
   <title>DS3</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <!--<link href="https://github.com/chabrowa/jkan/blob/gh-pages/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
   <!-- Custom styles for this template -->
