adding dataset page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ layout: poor
               <input type="text" class="form-control" placeholder="search phrase...">
               <span class="input-group-btn">
 
-                <a href="jkan-gh-pages/index.html" class="btn btn-secondary">Go!</a>
+                <!--<a href="jkan-gh-pages/index.html" class="btn btn-secondary">Go!</a> -->
+                <a class="btn btn-secondary" href="{{ site.baseurl }}/datasets" role="button">Go!</a>
               </span>
             </div>
           </div>
