update landing page

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ layout: poor
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
           </div>
-          <div class="card-footer">
+          <!--<div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-lg-4 mb-4">
@@ -100,9 +100,9 @@ layout: poor
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
           </div>
-          <div class="card-footer">
+          <!--<div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="col-lg-4 mb-4">
@@ -111,9 +111,9 @@ layout: poor
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
           </div>
-          <div class="card-footer">
+          <!--<div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
