--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ layout: poor
         <div class="carousel-item active" style="background-image: url('https://images.unsplash.com/photo-1491186751821-59a0a1bd73f1?dpr=1&auto=format&fit=crop&w=1050&h=&q=60&cs=tinysrgb&crop=')">
           <div class="carousel-caption d-none d-md-block" style="top: 150px;">
             <h2 style="color:black;font-weight: bold;">DATASET SEARCH ENGINE</h2>
-            <p style="color:black;font-weight: bold">What dataset are you looking for?</p>
+            <p style="color:black;font-weight: bold">What datasets are you looking for?</p>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="search phrase...">
+              <!--<input type="text" class="form-control" placeholder="search phrase..."> -->
               <span class="input-group-btn">
 
                 <!--<a href="jkan-gh-pages/index.html" class="btn btn-secondary">Go!</a> -->
-                <a class="btn btn-secondary" href="{{ site.baseurl }}/datasets" role="button">Go!</a>
+                <a class="btn btn-primary" href="{{ site.baseurl }}/datasets" role="button">Go!</a>
               </span>
             </div>
           </div>
