--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@ layout: poor
           <div class="carousel-caption d-none d-md-block" style="top: 150px;">
             <h2 style="color:black;font-weight: bold;">DATASET SEARCH ENGINE</h2>
             <p style="color:black;font-weight: bold">What datasets are you looking for?</p>
-            <div class="input-group">
-              <!--<input type="text" class="form-control" placeholder="search phrase..."> -->
+            <a class="btn btn-primary" href="{{ site.baseurl }}/datasets" role="button">Go!</a>
+            <!--<div class="input-group">
+              <input type="text" class="form-control" placeholder="search phrase...">
               <span class="input-group-btn">
 
-                <!--<a href="jkan-gh-pages/index.html" class="btn btn-secondary">Go!</a> -->
+                <a href="jkan-gh-pages/index.html" class="btn btn-secondary">Go!</a>
                 <a class="btn btn-primary" href="{{ site.baseurl }}/datasets" role="button">Go!</a>
               </span>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
