--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ layout: poor
           <div class="carousel-caption d-none d-md-block" style="top: 150px;">
             <h2 style="color:black;font-weight: bold;">DATASET SEARCH ENGINE</h2>
             <p style="color:black;font-weight: bold">What datasets are you looking for?</p>
-            <a class="btn btn-primary" href="{{ site.baseurl }}/datasets" role="button">Go!</a>
+            <a class="btn btn-default btn-block" href="{{ site.baseurl }}/datasets" role="button">Go!</a>
             <!--<div class="input-group">
               <input type="text" class="form-control" placeholder="search phrase...">
               <span class="input-group-btn">
