--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ layout: poor
         <div class="card h-100">
           <h4 class="card-header">Dataset Search</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+            <p class="card-text">Structured data is organised explicitly - such as in spreadsheets, web tables, databases or maps and typically grouped into datasets, many of which are published on the web, for instance in data catalogues available on data portals. DS3 allows you to search for such datasets. 
+</p>
           </div>
           <!--<div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
