--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 layout: default
 ---
 
-{% include head.html %}
-
-<body>
-
-  <!-- Navigation -->
-  {% include header.html %}
+{% include breadcrumbs.html %}
 
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -109,5 +104,3 @@ layout: default
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/popper/popper.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-</body>
